# GameSaveSyncClient

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  codebook.toml
.cache/clangd/index/: main.cpp.F5AF3AEB44A34AD6.idx  window.cpp.687F46B274752CC6.idx  window.h.99D2D61CE7F9EAB2.idx  window.hpp.B64648E99D7F6D5B.idx
.github/workflows/: make.yml
.zed/: debug.json  tasks.json
include/: addGameDialog.h  backgroundSyncWorker.h  config.h  detailsViewWidget.h  gameSyncServerUtil.h  mainWindow.h  pathEditableRowWidget.h  pathItemDelegate.h  pathListModel.h  setupWindow.h  status.h  utilFileSystem.h  utilGameSyncServer.h  window.h
res/: GameSaveSyncClient.desktop
src/: addGameDialog.cpp  backgroundSyncWorker.cpp  config.cpp  detailsViewWidget.cpp  gameSyncServerUtil.cpp  main.cpp  mainWindow.cpp  pathEditableRowWidget.cpp  pathItemDelegate.cpp  pathListModel.cpp  setupWindow.cpp  utilFileSystem.cpp  utilGameSyncServer.cpp  window.cpp
ui/: main_window.ui
working directory/: config.ini
